containmentType() .. NOT type()!

and now we know the source of the "panel covers the entire screen" bug

BUG:259704